--- a/_posts/cissp/2023-05-23-cissp-ch6.md
+++ b/_posts/cissp/2023-05-23-cissp-ch6.md
@@ -3,3 +3,111 @@ layout: post
 title: Chapter 6 Cryptography and Symmetric Key Algorithms
 categories: cissp
 ---
+
+* Cryptographic provides CIA for:
+    * Data at rest.
+    * Data in transit.
+    * Data in use (in memory).
+* Historical "arms race" of researchers developing stronger encryption algorithms, while hackers tried to break them.
+    * We now have very sophisticated algorithms.
+
+### Cryptographic Foundations
+
+# Goals of Cryptography
+
+* 4 fundamentals goals:
+    * Confidentiality
+    * Integrity
+    * Authentication
+    * Nonrepudiation
+* Not all cryptosystems are designed to reach each goal.
+
+#### Confidentiality
+
+* Data remains private in rest, in transit, in use.
+* "The preservation of secrecy".
+* Symmetric cryptosystems
+    * Shared key among users
+* Asymmetric cryptosystems
+    * Unique public/private keypair for each user
+* Data at rest
+    * On hard drives, backup tapes, USB, etc.
+    * Data leak through physical theft of device
+* Data in motion ("data on the wire")
+    * Transmissions over network mediums
+    * Data leak through eavesdropping attacks
+* Data in use
+    * Active in computer memory
+    * Data leak through improper process isolation at operating system-layer
+
+#### Integrity
+
+* Ensures that data is not altered without authorization.
+* Encrypted message digests.
+    * Digital signatures (created using cryptography) to verify the contents of a message.
+    * A recipient can then re-compute the signature for a message and compare it with the previous one to see if the message has been tampered with.
+* Ensures data was not altered between time of creation and time of access.
+* Allows for file integrity checking.
+
+#### Authentication
+
+* Verify a claimed identity.
+* Challenge-Response authentication protocol:
+    * Alice and Bob have a shared secret key and wish to communicate.
+    * When they begin communicating online and claim who they are, Alice can ask Bob to encrypt a short message with the secret key they both know.
+    * If Bob can return such an encrypted message, Alice can be certain it's him, because only they know that secret key.
+
+![Image](/docs/assets/images/cissp/ch6/alice-bob-auth.png)
+
+#### Nonrepudiation
+
+* Ensures who sent a message, and the fact that they did send that message.
+* If only Bob knows the secret key, it must have been him who sent the message.
+    * He can't later claim he didn't.
+    * Unless the key was somehow leaked of course!
+* This property is provided by ASYMMETRIC cryptosystems.
+
+# Cryptography Concepts
+
+* Plaintext (denoted "P")
+    * Regular message before encryption
+* Sender uses an algorithm used to _encrypt_ _plaintext_
+    * This produces a _ciphertext_ (C)
+* Recipient uses an algorithm (not necessarily different from the one sender used) to _decrypt_ the C into P.
+
+
+* Cryptographic algorithms rely on _keys_
+    * Key = usually just a number
+* Each algorithm has its own _key space_
+    * Key space = Valid range of values for a key
+    * Defined by its _bit size_
+        * Number of binary digits (1s and 0s) in the key
+    * If bit size is 5, then key space is the range of numbers:
+        * 00000 (in binary) = 0 (in decimal)
+        * 11111 = 31 (i.e. 2<sup>5</sup>)
+    * 128-bit key has key space from 0 to 2<sup>128</sup>
+    * n-bit key has key space from 0 to 2<sup>n</sup>
+* Keep your keys SECRET!
+
+
+* Kerchkoff's Principle
+    * Algorithms used for encryption & decryption should be public
+    * Cryptographic system should be secure even if everything except the secret key is known!
+        * Security through obscurity is not better.
+            * Public exposure => researchers can find weaknessess/faults quicker!
+
+
+
+* _"Cryptovariables"_ - name for cryptographic keys
+* _"Cryptography"_ - Creating/implementing secret codes/ciphers
+* _"Cryptanalysis"_ - the study of methods to defeat ciphers
+* _"Cryptology"_ - Cryptography & Cryptanalysis combined
+* _"Cryptosystems"_ - Specific implementations of a cipher in hardware/software
+* Federal Information Processing Standard (FIPS) 140-2 "Security Requirements for Cryptographic Modules"
+    * Document outlining the hardware/software requirements for federal government in the U.S.
+
+# Cryptographic Mathematics
+
+* 
+
+#### Boolean Mathematics 
