--- a/_posts/cissp/2023-05-23-cissp-ch6.md
+++ b/_posts/cissp/2023-05-23-cissp-ch6.md
@@ -108,6 +108,86 @@ categories: cissp
 
 # Cryptographic Mathematics
 
-* 
+* We will here discuss mathematics; logical operations that are the foundations of cryptography.
+* You will not need to do math or solve cryptographical problems in a mathematical sense; but it's vital for your understanding!
 
-#### Boolean Mathematics 
+#### Boolean Mathematics
+
+* Decimal system - base 10 system
+    * Each place value in a number is a multiple of 10
+    * E.g. the number "21" can be calculated (going from right to left):
+        * 1 * 10<sup>0</sup> + 2 * 10<sup>1</sup> = 1 * 1 + 2 * 10 = 1 + 20 = 21
+    * In binary, "1011 is calculated as (going from right to left):
+        * 1 * 2<sup>0</sup> + 1 * 2<sup>1</sup> + 0 * 2<sup>2</sup> + 1 * 2<sup>3</sup> = 1 + 2 + 0 + 8 = 11
+
+#### Logical operations
+
+* Manipulating data:
+
+#### AND operation
+
+* Symbol ^
+    * E.g. 1011 ^ 1111
+    * The AND operation takes TWO inputs at a time.
+    * So from 1011, we take the 1 from the left, and from 1111, we take the 1 from the left, and we input them to the AND function
+        * The AND operation returns 1 if both input bits are 1, and returns 0 otherwise:
+        * Since both are 1's, the first output/return value in the resulting number is also 1
+    * See the examples below.
+
+![Image](/docs/assets/images/cissp/ch6/x-y-boolean.jpeg)
+
+![Image](/docs/assets/images/cissp/ch6/full-and.jpeg)
+
+#### OR
+
+* The symbol for OR is V.
+* If X and Y are both 0, the output is 0.
+    * Else, the output is 1.
+* Can you figure out the output of X: 0 1 1 0 1 1 0 0 OR Y: 1 0 1 0 0 1 1 1?
+<details>
+    <summary>Answer</summary>
+
+    X V Y: 1 1 1 0 1 1 1 1
+
+</details>
+
+
+#### NOT
+
+* Symbol for NOT is ~
+* Invert a bit
+* If X is 1, ~X would be 0, and vice versa.
+
+#### Exclusive OR (XOR)
+
+* Symbol is &oplus;
+* If X and Y are both 0's or 1's, the output is 0.
+    * Else, if X and Y are both different (e.g. X is 0 and Y is 1, or X is 1 and Y is 0), the output is 1.
+* Can you solve 0 1 1 0 1 1 0 0 &oplus; 1 0 1 0 0 1 1 1
+
+<details>
+    <summary>Answer</summary>
+
+    X &oplus; Y: 1 1 0 0 1 0 1 1
+
+</details>
+
+#### Modulo function
+
+* Symbol can be either the word "mod" or the percentage %
+* Modulo returns the remainder of a division operation
+    * Let's say you divide 6 by 4, i.e. 6 / 4
+    * The result is 1 (because 4 fits only once into 6) with a remainder value of 2
+    * The module function outputs that remainder value 2
+        * So: 6 mod 4 = 6 % 4 = 2
+
+* Can you figure out what 33 mod 10 is?
+<details>
+    <summary>Answer</summary>
+
+    33 mod 10 = 33 % 10 = 3
+
+</details>
+
+#### One-Way Functions
+
