--- a/_posts/tlpi/2023-05-29-tlpi-ch15.md
+++ b/_posts/tlpi/2023-05-29-tlpi-ch15.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: The Linux Programming Interface Chapter 15 File Systems Summary
+title: The Linux Programming Interface Chapter 15 File Attributes
 categories: tlpi
 ---
 
